{
  "version": 4,
  "terraform_version": "1.9.4",
  "serial": 236,
  "lineage": "8ed6a2bd-b6db-b6fe-4e62-8253a83f2b5a",
  "resources": [
    {
      "mode": "managed",
      "type": "aws_instance",
      "name": "pappu",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "ami": "ami-0c7dbedd2bc00e130",
            "arn": "arn:aws:ec2:ap-south-1:009160047882:instance/i-06d359245b1d5e726",
            "associate_public_ip_address": true,
            "availability_zone": "ap-south-1a",
            "capacity_reservation_specification": [
              {
                "capacity_reservation_preference": "open"
              }
            ],
            "cpu_core_count": 1,
            "cpu_options": [
              {
                "core_count": 1,
                "threads_per_core": 1
              }
            ],
            "cpu_threads_per_core": 1,
            "credit_specification": [
              {
                "cpu_credits": "standard"
              }
            ],
            "disable_api_stop": false,
            "disable_api_termination": false,
            "ebs_optimized": false,
            "enclave_options": [
              {
                "enabled": false
              }
            ],
            "get_password_data": false,
            "hibernation": false,
            "id": "i-06d359245b1d5e726",
            "instance_initiated_shutdown_behavior": "stop",
            "instance_state": "running",
            "instance_type": "t2.micro",
            "ipv6_address_count": 0,
            "key_name": "ssg_key",
            "maintenance_options": [
              {
                "auto_recovery": "default"
              }
            ],
            "metadata_options": [
              {
                "http_endpoint": "enabled",
                "http_protocol_ipv6": "disabled",
                "http_put_response_hop_limit": 2,
                "http_tokens": "required",
                "instance_metadata_tags": "disabled"
              }
            ],
            "monitoring": false,
            "placement_partition_number": 0,
            "primary_network_interface_id": "eni-06f1390f7aac9ff6a",
            "private_dns": "ip-10-0-1-218.ap-south-1.compute.internal",
            "private_dns_name_options": [
              {
                "enable_resource_name_dns_a_record": false,
                "enable_resource_name_dns_aaaa_record": false,
                "hostname_type": "ip-name"
              }
            ],
            "private_ip": "10.0.1.218",
            "public_dns": "ec2-65-2-189-156.ap-south-1.compute.amazonaws.com",
            "public_ip": "65.2.189.156",
            "root_block_device": [
              {
                "delete_on_termination": true,
                "device_name": "/dev/sda1",
                "encrypted": false,
                "iops": 3000,
                "throughput": 125,
                "volume_id": "vol-01c44223d2bc5ada8",
                "volume_size": 8,
                "volume_type": "gp3"
              }
            ],
            "source_dest_check": true,
            "subnet_id": "subnet-04758be2a7343cd47",
            "tenancy": "default",
            "user_data_replace_on_change": false,
            "vpc_security_group_ids": [
              "sg-029af8b9b42d251bc"
            ]
          },
          "dependencies": [
            "aws_security_group.web_sg",
            "aws_subnet.public",
            "aws_vpc.eks",
            "data.aws_ami.ubuntu"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_internet_gateway",
      "name": "all",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:009160047882:internet-gateway/igw-006e345dd2e5e4af7",
            "id": "igw-006e345dd2e5e4af7",
            "owner_id": "009160047882",
            "vpc_id": "vpc-0034a86366bdade47"
          },
          "dependencies": [
            "aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table",
      "name": "internet",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:009160047882:route-table/rtb-0eaef4d5022b6e96b",
            "id": "rtb-0eaef4d5022b6e96b",
            "owner_id": "009160047882",
            "propagating_vgws": [],
            "route": [
              {
                "carrier_gateway_id": "",
                "cidr_block": "0.0.0.0/0",
                "core_network_arn": "",
                "destination_prefix_list_id": "",
                "egress_only_gateway_id": "",
                "gateway_id": "igw-006e345dd2e5e4af7",
                "ipv6_cidr_block": "",
                "local_gateway_id": "",
                "nat_gateway_id": "",
                "network_interface_id": "",
                "transit_gateway_id": "",
                "vpc_endpoint_id": "",
                "vpc_peering_connection_id": ""
              }
            ],
            "tags": {},
            "tags_all": {},
            "timeouts": null,
            "vpc_id": "vpc-0034a86366bdade47"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_internet_gateway.all",
            "aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_route_table_association",
      "name": "connect",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "rtbassoc-02d5a7d53112c9d0e",
            "route_table_id": "rtb-0eaef4d5022b6e96b",
            "subnet_id": "subnet-04758be2a7343cd47"
          },
          "dependencies": [
            "aws_internet_gateway.all",
            "aws_route_table.internet",
            "aws_subnet.public",
            "aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_security_group",
      "name": "web_sg",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:009160047882:security-group/sg-029af8b9b42d251bc",
            "description": "Managed by Terraform",
            "egress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 0,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "-1",
                "security_groups": [],
                "self": false,
                "to_port": 0
              }
            ],
            "id": "sg-029af8b9b42d251bc",
            "ingress": [
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 22,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 22
              },
              {
                "cidr_blocks": [
                  "0.0.0.0/0"
                ],
                "description": "",
                "from_port": 80,
                "ipv6_cidr_blocks": [],
                "prefix_list_ids": [],
                "protocol": "tcp",
                "security_groups": [],
                "self": false,
                "to_port": 80
              }
            ],
            "name": "terraform-20240813101325577000000001",
            "name_prefix": "terraform-",
            "owner_id": "009160047882",
            "revoke_rules_on_delete": false,
            "tags": {
              "Name": "ssg"
            },
            "tags_all": {
              "Name": "ssg"
            },
            "timeouts": null,
            "vpc_id": "vpc-0034a86366bdade47"
          },
          "sensitive_attributes": [],
          "dependencies": [
            "aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "private",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:009160047882:subnet/subnet-0bc039c11ca0bf665",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1b",
            "availability_zone_id": "aps1-az3",
            "cidr_block": "10.0.2.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-0bc039c11ca0bf665",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": false,
            "owner_id": "009160047882",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0034a86366bdade47"
          },
          "dependencies": [
            "aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_subnet",
      "name": "public",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:009160047882:subnet/subnet-04758be2a7343cd47",
            "assign_ipv6_address_on_creation": false,
            "availability_zone": "ap-south-1a",
            "availability_zone_id": "aps1-az1",
            "cidr_block": "10.0.1.0/24",
            "enable_dns64": false,
            "enable_lni_at_device_index": 0,
            "enable_resource_name_dns_a_record_on_launch": false,
            "enable_resource_name_dns_aaaa_record_on_launch": false,
            "id": "subnet-04758be2a7343cd47",
            "ipv6_native": false,
            "map_customer_owned_ip_on_launch": false,
            "map_public_ip_on_launch": true,
            "owner_id": "009160047882",
            "private_dns_hostname_type_on_launch": "ip-name",
            "vpc_id": "vpc-0034a86366bdade47"
          },
          "dependencies": [
            "aws_vpc.eks"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "aws_vpc",
      "name": "eks",
      "provider": "provider[\"registry.terraform.io/hashicorp/aws\"]",
      "instances": [
        {
          "schema_version": 1,
          "attributes": {
            "arn": "arn:aws:ec2:ap-south-1:009160047882:vpc/vpc-0034a86366bdade47",
            "assign_generated_ipv6_cidr_block": false,
            "cidr_block": "10.0.0.0/16",
            "default_network_acl_id": "acl-0e5d69350ac747afe",
            "default_route_table_id": "rtb-0ae0df33beac5720c",
            "default_security_group_id": "sg-0a3f62dca432750da",
            "dhcp_options_id": "dopt-0daad23d20214bf8d",
            "enable_dns_hostnames": true,
            "enable_dns_support": true,
            "enable_network_address_usage_metrics": false,
            "id": "vpc-0034a86366bdade47",
            "instance_tenancy": "default",
            "ipv6_netmask_length": 0,
            "main_route_table_id": "rtb-0ae0df33beac5720c",
            "owner_id": "009160047882",
            "tags": {
              "name": "eks"
            },
            "tags_all": {
              "name": "eks"
            }
          }
        }
      ]
    }
  ]
}